classDiagram
direction TB

%% ==================== FRONTEND ====================

class TransactionControllerFE["TransactionController"] {
    <<frontend controller>>
    + Instructor(payoutPage: int, payoutPageSize: int, payoutKeyword: string?, payoutSortBy: string?, payoutStatus: string?) Task~IActionResult~
}

class InstructorPayoutPagedViewModel {
    - Items : List~InstructorPayoutViewModel~
    - TotalCount : int
    - Page : int
    - PageSize : int
    - TotalPages : int
}

class InstructorPayoutViewModel {
    - PayoutId : int
    - Amount : decimal
    - PayoutDate : DateTime
    - IsPaid : bool
    - CourseTitle : string
    - TotalAmount : decimal
    - PayoutStatus : string?
    - PaidToBankAt : DateTime?
    - StripeTransferId : string?
    - StripePayoutId : string?
}

%% ==================== BACKEND - CONTROLLER ====================

class InstructorControllerBE["InstructorController"] {
    <<backend controller>>
    - _instructorService : IInstructorService
    + GetPayouts(page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~IActionResult~
}

%% ==================== BACKEND - DTOs ====================

class InstructorPayoutDto {
    - PayoutId : int
    - Amount : decimal
    - PayoutDate : DateTime
    - IsPaid : bool
    - CourseTitle : string
    - TotalAmount : decimal
    - PayoutStatus : string?
    - PaidToBankAt : DateTime?
    - StripeTransferId : string?
    - StripePayoutId : string?
}

%% ==================== BACKEND - DOMAIN ENTITIES ====================

class InstructorPayout {
    - PayoutId : int
    - TransactionId : int?
    - InstructorId : int?
    - PayoutAmount : decimal
    - PayoutDate : DateTime
    - IsPaid : bool
    - PayoutStatus : string
    - StripeTransferId : string?
    - StripePayoutId : string?
    - PaidToBankAt : DateTime?
    - Transaction : Transaction?
    - Instructor : Instructor?
}

%% ==================== BACKEND - SERVICE INTERFACES ====================

class IInstructorService {
    <<interface>>
    + GetPayoutsAsync(userId: int, page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~PagedResult~InstructorPayoutDto~~ *
}

%% ==================== BACKEND - REPOSITORY INTERFACES ====================

class IInstructorRepository {
    <<interface>>
    + GetPayoutsAsync(instructorId: int, page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~PagedResult~InstructorPayoutDto~~ *
}

%% ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class InstructorService {
    - _repo : IInstructorRepository
    + GetPayoutsAsync(userId: int, page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~PagedResult~InstructorPayoutDto~~
}

%% ==================== BACKEND - REPOSITORY IMPLEMENTATION ====================

class InstructorRepository {
    - _context : AppDbContext
    + GetPayoutsAsync(instructorId: int, page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~PagedResult~InstructorPayoutDto~~
}

%% ==================== BACKEND - DbContext ====================

class AppDbContext {
    + InstructorPayouts : DbSet~InstructorPayout~
}

%% ==================== RELATIONSHIPS ====================

%% === COMPOSITION / AGGREGATION ===
InstructorPayoutPagedViewModel *-- InstructorPayoutViewModel

%% === UNIDIRECTIONAL ASSOCIATION ===
TransactionControllerFE ..> InstructorControllerBE
InstructorControllerBE --> IInstructorService
InstructorService --> IInstructorRepository
InstructorRepository --> AppDbContext

%% === INTERFACE REALIZATION ===
InstructorService ..|> IInstructorService
InstructorRepository ..|> IInstructorRepository

%% === DEPENDENCY ===
TransactionControllerFE ..> InstructorPayoutPagedViewModel
InstructorControllerBE ..> InstructorPayoutDto
IInstructorService ..> InstructorPayoutDto
InstructorService ..> InstructorPayoutDto
InstructorRepository ..> InstructorPayoutDto
InstructorRepository ..> InstructorPayout

%% ==================== STYLES ====================
classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000
